--- a/server/.env.example
+++ b/server/.env.example
@@ -1,16 +1,16 @@
 ## SERVER CONFIG
-SERVER_HOST=
-SERVER_PORT=
+SERVER_HOST= # Example: localhost
+SERVER_PORT= # Example: 3333
 
 ## SeaORM
-DATABASE_URL=
+DATABASE_URL= # Example: postgres://docker:docker@localhost:5432/database?schema=public
 
 ## OLLAMA
 OLLAMA_MODEL= # Example: llama3.1:latest - deepseek-r1:8b - gemma3:12b - ...
 OLLAMA_PROMPT= # Keep in mind that Wikipedia article text will be appended to the end of this String
 
-## CLOUDINARY
+## CLOUDINARY - get these from Cloudinary dashboard
 CLOUDINARY_API_SECRET=
 CLOUDINARY_API_KEY=
 CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_IMAGES_FOLDER=
+CLOUDINARY_IMAGES_FOLDER= # Create a folder at Media Library in Assets page
