--- a/web/.env.example
+++ b/web/.env.example
@@ -1,8 +1,8 @@
 ## API
-API_URL=
+API_URL= # Example: http://localhost:3333
 
-## CLOUDIARY
+## CLOUDIARY - get these from Cloudinary dashboard
 CLOUDINARY_API_SECRET=
 CLOUDINARY_API_KEY=
 PUBLIC_CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_IMAGES_FOLDER=  ## OPTIONAL
+CLOUDINARY_IMAGES_FOLDER= # Create a folder at Media Library in Assets page
